# data-quality-introduction

./: 404.html  duckdb_file.db  index.html  infer_schema.csv  infer_schema.json  mkdocs.yml  objects.inv  pyproject.toml  schema_crm.py
.github/workflows/: CI.yml
app/: etl.py  etl_infer_schema.py  hello_function.py  read_duckdb.py  schema.py  schema_email.py
docs/: index.md
search/: search_index.json
tests/: test_func_etl.py  test_hello_world.py
